--- a/12_Rails_Intro_Controller_Continued/code_along/bookazon_app/app/views/books/edit.html.erb
+++ b/12_Rails_Intro_Controller_Continued/code_along/bookazon_app/app/views/books/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<!-- <h1>Books#edit</h1>
+<p>Find me in app/views/books/edit.html.erb</p> -->
+
+<div class="col-xs-12">
+
+<h1 style="color:#cc3333"> New Book </h1>
+
+<div class="well">
+  <%= simple_form_for @book do |f| %>
+  <%= f.input :title %>
+  <!-- <%= f.input :title, label:false, input_html: {placeholder: "Title"} %> -->
+  <%= f.input :author %>
+  <%= f.input :year_published %>
+  <%= f.input :genre %>
+  <%= f.input :image_url %>
+
+  <%= f.submit "Submit".html_safe, class: 'btn btn-lg btn-danger' %>
+<% end %>
+</div>
+
+</div>
