--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/layouts/application.html.erb
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/layouts/application.html.erb
@@ -16,9 +16,12 @@
 
 
 </head>
+
 <body>
 
-  <%= yield %>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<%= render 'layouts/main_nav' %>
+<%= yield %>
 
 </body>
 </html>
