--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/assets/stylesheets/custom.css.scss
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,20 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+/* Fonts */
+@import url(https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
+
+.lora_font {
+font-family: 'Lora', serif;
+}
+
+.montserrat_font {
+font-family: 'Montserrat', sans-serif;
+}
+
+.slabo_font {
+  font-family: 'Slabo 27px', serif;
+}
