--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/assets/stylesheets/custom.css.scss
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,8 @@
+// @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+// @import "grayscale"; from Travis
 
 /* Fonts */
 @import url(https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic);
