--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/assets/stylesheets/grayscale.css
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/assets/stylesheets/grayscale.css
@@ -163,6 +163,7 @@ a:focus {
 
 .intro .intro-body .brand-heading {
     font-size: 40px;
+    color: DarkRed;
 }
 
 .intro .intro-body .intro-text {
@@ -307,7 +308,8 @@ a:focus {
 
 .btn-default {
     border: 1px solid #42dca3;
-    color: #42dca3;
+    /*color: #42dca3;*/
+    color: DarkRed;
     background-color: transparent;
 }
 
