--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/artists/index.html.erb
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/artists/index.html.erb
@@ -3,15 +3,16 @@
     <table class="table table-hover">
       <!-- This is a table row with headers -->
       <tr>
+        <h1>bit beats ARTISTS</h1>
         <th> </th>
         <th>  </th>
-        <th>Actions</th>
+        <th>  </th>
       </tr>
 
       <%@artists.each do |artist| %>
       <tr>
         <td class="col-md-2"> <%= image_tag(artist.image_url,class: 'img-thumbnail img-reponsive') %> </td>
-        <td> <%=artist.name %> </td>
+        <td><h5><%=artist.name %><h5></td>
         <td>
           <%=link_to 'Show', artist_path(artist), class: 'btn btn-default btn-xs' %>
           <%= link_to 'Edit', edit_artist_path(artist), class: 'btn btn-success btn-xs' %>
