--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/layouts/_main_nav.html.erb
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/layouts/_main_nav.html.erb
@@ -1,3 +1,4 @@
+<!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -14,12 +15,19 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <!-- <a class="page-scroll" href="#home">Home</a> -->
+                    <%= link_to "Home", root_path %>
                 </li>
                 <li>
                   <%= link_to "Artists", artists_path %>
                     <!-- <a class="page-scroll" href="#artists">Artists</a> -->
-
+                </li>
+                <li>
+                  <%= link_to "Songs" %>
+                    <!-- <a class="page-scroll" href="#artists">Artists</a> -->
+                </li>
+                <li>
+                    <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
                   <%= link_to "Sign Up" %>
