--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/static_pages/home.html.erb
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/static_pages/home.html.erb
@@ -21,8 +21,8 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Testing</p>
+                <h2>About Bit Beats by Gomez</h2>
+                <h4><center>In an enormous sea of musical choice, Bit Beats by Gomez utilizes the revelutionary G15 technology, to match your specific genetic musical predispositions and haplogroup<center><h4>
             </div>
         </div>
     </section>
