what the hell have I done now?

--- a/14_Rails_Intro_Front_End/guidance/my_music_app/app/views/artists/show.html.erb
+++ b/14_Rails_Intro_Front_End/guidance/my_music_app/app/views/artists/show.html.erb
@@ -1,9 +1,9 @@
 <div class="row-fluid">
   <div class="panel panel-default">
-  <div class="col-md-6">
+  <div class="col-md-6"> 
     <%=image_tag(@artist.image_url, class: "img-responsive thumbnail") %>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6">  <!-- splits 12 into 2 -->
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1> <%= @artist.name%>
@@ -12,10 +12,14 @@
       </div>
       <div class="panel-body">
         <p> <%= @artist.description %> </p>
+        <div class = "well">
+        <ul><% @songs.each do |song| %>
+         <li><%= song.title %> | <%= link_to "Go to lyrics", song.lyric_url, class: 'btn btn-danger btn-xs', target: '_blank' %></li>
+         </ul>
+        <% end %>
       </div>
     </div>
-
-
-
   </div>
 </div>
+</div>
+
