--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/artists/new.html.erb
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/artists/new.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h1> New Artist </h1>
+    <h1> Bit Beats -- New Artist </h1>
   </div>
  <%=render 'form' %>
 </div>
