--- a/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/artists/index.html.erb
+++ b/15_Rails_Intro_Front_End_Continued/code_along/my_music_app/app/views/artists/index.html.erb
@@ -1,11 +1,12 @@
 <div class="col-md-12">
   <div class="table-responsive">
+    <h1 style="color:#666666;"> Our Cool Artists </h1>
     <table class="table table-hover">
       <!-- This is a table row with headers -->
       <tr>
         <th> </th>
-        <th>  </th>
-        <th>Actions</th>
+        <th>Name</th>
+        <th> </th>
       </tr>
 
       <%@artists.each do |artist| %>
